fix layout issue caused by remarketing tag

--- a/public/stylesheets/base/_footer.scss
+++ b/public/stylesheets/base/_footer.scss
@@ -1,8 +1,8 @@
 .footer {
   width: 100%;
   text-align: center;
-  padding-top: .5vw;
-  padding-bottom: 2vw;
+  padding-top: .5em;
+  padding-bottom: 2em;
   position: relative;
   background-color: $coral;
   .footer-content{
